mob & desk working, fix resp. on img-wrap shrinking

--- a/styles/general-styles.css
+++ b/styles/general-styles.css
@@ -89,14 +89,11 @@ main h2,
 
 @media only screen and (min-width: 481px) {
     body {
-<<<<<<< Updated upstream
-        width:100vw;
+        width: 100%;
+        height: 100%;
         flex-direction: row;
-        overflow:auto;
-=======
-
-        flex-direction: row;
->>>>>>> Stashed changes
+        flex-shrink:1pc;
+        justify-content:center;
     }
 
     main {
@@ -104,14 +101,11 @@ main h2,
         flex-direction: column;
         justify-content: center;
         align-items: center;
-<<<<<<< Updated upstream
-        width:;
-        margin-right:5rem; 
-        padding-right:80px;
-=======
-        /* min-width: 50%;
-        margin-right:5rem; */
->>>>>>> Stashed changes
+        width: max-content;
+        height: 100vh;
+        margin-left: 80px;
+       
+
     }
 
     main h1 {
@@ -126,21 +120,25 @@ main h2,
     main h2 {
         font-size: 1.5rem;
         margin-bottom: 4rem;
+        width: max-content;
 
     }
 
 
     /* Hero images */
-<<<<<<< Updated upstream
     .img-wrapper {
-        width: 45vw;
+        height: 100vh;
+        width:max-content;
+        flex-basis: max-content;
+       
     }
-=======
-   
->>>>>>> Stashed changes
+
     #img-hero-0 {
-        height: 87vh;
-        margin: 3.125rem 0 3rem 13.25rem;
+
+        height: 87%;
+        margin-top: 3.125rem ;
+        margin-left: 1.8rem; 
+        margin-bottom:/*13.25rem; */ auto;
 
     }
 
@@ -188,7 +186,7 @@ main h2,
         display: flex;
         flex-direction: column;
         justify-content: center;
-        width:100vw;
+        width: 100vw;
         align-items: center;
     }
 
